# webterm

./: .node-version  CHANGELOG.md  Cargo.toml  LICENCE.md  README.md  release-plz.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: cargo-test.yml  clippy.yml  frontend-build.yml  frontend-eslint.yml  frontend-test.yml  release-binaries-manual.yml  release-binaries.yml  release-binary-manual.yml  release-plz-pr.yml  release-plz-release.yml
agent/: CHANGELOG.md  Cargo.toml  README.md
agent/src/: agent_version.rs  args.rs  config.rs  daemonise.rs  lib.rs  main.rs
agent/src/messaging/: mod.rs  process_f2a.rs  process_r2a.rs  process_r2a_handshake.rs
agent/src/models/: activity.rs  activity_registry.rs  agent_error.rs  connection_manager.rs  frontend.rs  frontend_registry.rs  handshaker.rs  mod.rs  panic_error.rs  pty_activity.rs  pty_activity_reader.rs  pty_activity_writer.rs  relay.rs  relay_connection.rs  runner.rs  send_payload.rs  session.rs  session_registry.rs  socket_reader.rs  socket_writer.rs  terminal.rs  terminal_reader.rs  terminal_registry.rs  terminal_writer.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: compress.rs  constants.rs  flatbuffers_helpers.rs  handshake_v1_helpers.rs  lib.rs  random.rs  simple_cache.rs  types.rs
core/src/cryptography/: cryptographer.rs  iv_counter.rs  mod.rs
core/src/models/: device_id.rs  mod.rs  reader_socket_error.rs  webterm_error.rs
core/src/serialisers/: mod.rs
core/src/serialisers/handshake_v1/: a2r_handshake_builder.rs  mod.rs  r2a_handshake_builder.rs  r2f_handshake_builder.rs
core/src/serialisers/talk_v1/: a2f_builder.rs  a2r_builder.rs  mod.rs  r2a_builder.rs  r2f_builder.rs  terminal_output_builder.rs
docs/: build-instructions.md  deploy-frontend.md  deploy-relay.md
flatbuffers/: agent_to_frontend.fbs  agent_to_relay.fbs  frontend_to_agent.fbs  frontend_to_relay.fbs  relay_to_agent.fbs  relay_to_frontend.fbs  schema.fbs
frontend/: .env.development  .prettierrc.json  .prettierrc.mjs  README.md  astro.config.mjs  astro.config.ts  eslint.config.js  get.sh  latest.txt  package-lock.json  package.json  tsconfig.json
frontend/public/: get
frontend/src/components/: MainNavRibbon.astro  NotificationBell.astro  TerminalTopRibbon.astro
frontend/src/components/react/: RibbonActiveNotification.tsx  RibbonNotificationBell.tsx
frontend/src/components/react/entry-points/: HandshakeModal.tsx  RibbonActiveNotification.tsx  RibbonNotificationBell.tsx  TerminalTopRibbon.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: get.ts  index.astro  install-relay.sh.ts  install.sh.ts  latest.txt.ts  terminal.astro
frontend/src/scripts/client/: RelayConnection.ts  Session.ts  TerminalConnection.ts  config.ts  errors.ts  flatbuffers_helpers.ts  handshake_v1_helpers.ts  homepage.ts  relay.ts  stores.ts  talk_v1_helpers.ts  terminal.ts
frontend/src/scripts/client/cryptography/: Cryptographer.test.ts  Cryptographer.ts  IVCounter.test.ts  IVCounter.ts
frontend/src/scripts/client/entry-points/: homepage.ts  terminal.ts
frontend/src/scripts/client/functions/: alertAndThrow.ts  createF2rHandshake.ts  deflateRaw.test.ts  deflateRaw.ts  ensureBinary.ts  formatPtyOutput.ts  jsonUtils.test.ts  jsonUtils.ts  pluralise.ts  processA2f.ts  processR2f.ts  readA2fEncryptedRoot.ts  readCreateActivityResponse.ts  readR2fHandshake.ts  readR2fRoot.ts
frontend/src/scripts/client/models/: Relay.ts  RelayConnection.ts  RelayHandshake.ts  Runner.ts  SendPayload.ts  SessionStore.ts  StoredCredential.test.ts  StoredCredential.ts  TerminalConnection.ts
frontend/src/scripts/client/parsers/: readA2fRoot.ts  readR2fHandshake.ts  readTerminalOutput.ts
frontend/src/scripts/client/pipeline/: processA2f.ts  processR2f.ts  processTerminalOutput.ts
frontend/src/scripts/client/serialisers/: F2aBuilder.test.ts  F2aBuilder.ts  F2rBuilder.test.ts  F2rBuilder.ts  F2rHandshakeBuilder.ts  TerminalInputBuilder.ts
frontend/src/scripts/client/types/: BigIntLike.ts  BinaryBlob.ts  BinaryLike.ts  BitsArray.test.ts  BitsArray.ts
frontend/src/scripts/client/ui/: ActiveNotificationManager.ts  NotificationListManager.ts  NotificationManager.ts
frontend/src/styles/: main.scss  theme.scss
frontend/src/templates/: install.sh.ejs
relay/: CHANGELOG.md  Cargo.toml  README.md  askama.toml
relay/src/: config.rs  main.rs  relay_version.rs  router.rs
relay/src/controllers/: handshake.rs  handshake_v1.rs  index.rs  mod.rs  not_found.rs  talk_v1.rs  up.rs  ws.rs
relay/src/handshake/: mod.rs  process_a2r_handshake.rs  process_f2r_handshake.rs
relay/src/helpers/: mod.rs  render_response.rs
relay/src/models/: agent_connection.rs  agent_registry.rs  bridge.rs  frontend_connection.rs  handshake_nonce_agent_registry.rs  handshake_nonce_frontend_registry.rs  handshake_nonce_registry.rs  mod.rs  relay_error.rs  send_payload.rs  session.rs  socket_connection.rs  socket_reader.rs  socket_writer.rs  terminal.rs
relay/src/services/: mod.rs  perform_handshake.rs  process_a2r.rs  process_f2r.rs
relay/src/views/: 404.html  index.html
schema/: handshake_v1.fbs  talk_v1.fbs
schema/handshake_v1/: a2r.fbs  f2r.fbs  r2a.fbs  r2f.fbs
schema/shared/: bits.fbs  empty_table.fbs  vector_table.fbs  version.fbs
schema/talk_v1/: a2f.fbs  a2r.fbs  f2a.fbs  f2r.fbs  r2a.fbs  r2f.fbs  resize.fbs
schema/talk_v1/activity/: pty.fbs  terminal.fbs
scripts/: gen-flatbuffers.sh  update-latest-txt.sh
shared/: Cargo.toml
shared/src/: flatbuffer_helpers.rs  handshake_v1_helpers.rs  lib.rs  pty_output_formatter.rs  random.rs  simple_cache.rs  talk_v1_helpers.rs  types.rs
shared/src/models/: webterm_error.rs
src/: frontend_proxy.rs  main.rs
src/controllers/: index.rs  mod.rs  up.rs
src/views/: index.html  layout.html
