[package]
name = "web-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "ws", "http2"] }
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1.41.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
tower-http = "0.6.1"
tower-serve-static = "0.1.1"
include_dir = "0.7.4"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
