[package]
name = "webterm-agent"
description = "Lightweight agent component for Webterm that enables secure browser-based terminal access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env"] }
daemonize = "0.5.0"
flatbuffers = "25.1.24"
futures = "0.3.31"
gethostname = "1.0.0"
pty-process = { version = "0.5.1", features = ["async"] }
reqwest = "0.12.12"
semver = "1.0.25"
tokio = "1.43.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
webterm-core = { path = "../core", version = "0.2.5" }

[lints.clippy]
new_without_default = "allow"
