[package]
name = "webterm-core"
description = "Core libraries and types for Webterm - a secure browser-based terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.11.0-pre.2"
flatbuffers = "25.1.24"
pbkdf2 = { version = "0.13.0-pre.1", features = ["simple"] }
rand = "0.8.5"
semver = "1.0.24"
sha2 = "0.11.0-pre.4"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
flate2 = "1.0.35"

[lints.clippy]
new_without_default = "allow"
