[package]
name = "webterm-relay"
description = "Relay component for Webterm that enables secure browser-based terminal access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros", "ws", "http2"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
flatbuffers = "25.1.24"
futures = "0.3.31"
git-version = "0.3.9"
semver = "1.0.25"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webterm-core = { path = "../core", version = "0.2.5" }

[lints.clippy]
new_without_default = "allow"
